# sat_perform

./: .gitignore  CMakeLists.txt  SatEnv.cpp  SatEnv.h  bindings.cpp  eval_agent.py  main.cpp  sat_sim.cp313-win_amd64.pyd  train_ppo.py
config/: OrbitConfig.h  SatelliteConfig.h  SimConfig.h
controller/: BdotController.cpp  BdotController.h
orbit/: OrbitPropagator.cpp  OrbitPropagator.h
sensors/: IGRF.cpp  IGRF.h  Magnetosensor.cpp  Magnetosensor.h
spacecraft/: Kinematics.cpp  Kinematics.h  SpacecraftState.cpp  SpacecraftState.h
utils/: Conversions.h  GMST.h  PropagateDate.h
